Added code for file browser

--- a/WifiShare/bin/classes/.gitignore
+++ b/WifiShare/bin/classes/.gitignore
@@ -1,2 +1,6 @@
 /com
 /.gitignore
+/FileBrowserActivity$Item.class
+/FileBrowserActivity$ItemFileNameComparator.class
+/FileBrowserActivity.class
+/ua
