--- a/WifiShare/AndroidManifest.xml
+++ b/WifiShare/AndroidManifest.xml
@@ -24,13 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-	        
-	      <receiver android:name="com.receivers.WifiReceiver">
+		
+     	<activity android:name="ua.com.vassiliev.androidfilebrowser.FileBrowserActivity" android:label="@string/app_name">
+    	</activity>
+        	        
+	    <receiver android:name="com.receivers.WifiReceiver">
 	      	<intent-filter>
 	         	<action android:name="android.net.conn.CONNECTIVITY_CHANGE">
 	      		</action>
 	      	</intent-filter>
-	   	</receiver>
+		</receiver>
     </application>
 
 </manifest>
